# hazmap-scraper

./: MIGRATION_COMPLETE.md  README.md  data_verification_report.json  execute_migration.py  migration_simulation_report.json  pyproject.toml  run_scraper.py  test_vector_functionality.py  verify_migration_data.py
.context/: best_practices.md  data_verification.md  features.md  implementation_summary.md  migration_completion.md  plan.md  specifications.md  vector_embeddings.md
.devcontainer/: Dockerfile  devcontainer.json  postBuild.sh
.github/workflows/: neo4j-migrate-vectors.yml  scrape-registry.yml
data/: activities_registry_20250716_054430.yml  activities_registry_20250727_034354.yml  agents_registry_20250716_065511.yml  agents_registry_20250727_043839.yml  diseases_registry_20250727_043921.yml  findings_registry_20250716_010247.yml  findings_registry_20250716_065649.yml  findings_registry_20250727_043939.yml  hazmap-graph-schema.md  industries_registry_20250727_044003.yml  job_tasks_registry_20250727_044032.yml  jobs_registry_20250727_044111.yml  processes_registry_20250716_065952.yml  processes_registry_20250727_044130.yml
data/raw_html/activities/: 01df2fe2-4525-4f6b-9ff0-1505e1e58616_Enameling.html  029b0365-ef9e-4b34-b73b-b632a6485ce3_Smoking-cigarettes.html  04ba9056-9f05-4dfc-8c1b-46e55b07d646_Lost-wax-casting.html  05ea60f7-2ae5-4eaa-8aec-56404737bb5e_Glassblowing.html  0b974fda-5600-4a2e-846b-07d43554a3dc_Ceramics-making.html  11ad0051-974d-478a-8b2d-73c4ae5c1595_Drinking-water-from-a-private-well.html  1636b63e-3603-4004-945a-7f1512703536_Stained-glass-making.html  19816ce9-9edf-4a86-8e64-b0cbf7dcf520_Painting.html  1d66d0d1-f900-4059-9cab-b4db4a772527_Living-near-a-smelter.html  5da8379f-348e-4c31-b01e-2064314b102d_Sculpturing-plastics.html  5ecaef8d-fe1c-456b-aa9f-840772e180bf_Sculpturing-stone-containing-crystalline-silica.html  5f3dc057-190a-4067-91de-96ca73bfb32b_Woodworking.html  7330a82c-3fe4-4da0-bce1-bbd84318aa25_Textile-arts.html  81af869a-ce9b-483d-a700-ce2845d38c9c_Ingesting-herbal-remedies.html  8b567b7d-e675-48af-8f4a-a922426ed6ed_Intalagio-printing.html  9bef9e79-d476-461e-9426-6b3f2d7460c8_Cooking-or-drinking-wine-in-a-lead-glazed-container.html  a3f527ea-a632-41f6-8f2d-2b66b798708e_Living-near-chromium-plating-or-chromate-plant.html  abfe68b2-cbd2-41bf-8fc1-9a14d3df91d1_Leather-crafting.html  aefbefaf-709c-42f2-9cb7-cb86c6d4dd1f_Living-in-a-house-with-old-plumbing-or-old-paint.html  e2d0cbb9-6054-4425-b35c-dcc7c83ddd6f_Lithography-printing.html  ee99ac23-3366-4036-a2a4-9934af776e14_Jewelry-making.html  f42d48ec-a7c8-452c-8b96-86eae709358a_Eating-fish-that-lived-in-contaminated-water.html
data/raw_html/agents/: 000781ae-0d1e-447a-8493-9fe4a31a6192_Sodium-formate.html  00089626-1aca-4d38-bab5-5f2f49e0f33a_Lead-azide.html  0009c1d6-2041-45db-b50f-9532f4a4d773_Dichlorodiphenylgermane.html  000caa1b-5179-4e9d-ba88-8d6ac653e250_Phenyltrichlorosilane.html  00173ce4-5368-4224-bda7-eaed180aacdb_Bisacetylacetonatotitanium-oxide.html  0018b3fb-0935-440d-a9fe-77571e0fb898_N-Lauroylsarcosine.html  00224d07-1955-4c63-94a0-738e932a0d5b_Sodium-ligninsulfonate.html  (+11750 more)
data/registry/: diseases_registry_20250716_065616.yml  industries_registry_20250716_065730.yml  job_tasks_registry_20250716_065815.yml  jobs_registry_20250716_065921.yml
docs/: neo4j_migration_example.md  vector_search_examples.md
src/models/: findings.py  findings.yml  registry.py  sitemap.yml  symptons.yml
src/scripts/: add_vector_embeddings.py  detailed_scraper.py  html_to_json_converter.py  neo4j_migration.py  neo4j_migration_sample.py  raw_html_scraper.py  scrape_registry.py  test_neo4j.py  vector_embeddings.py
tests/: test_neo4j_migration.py  test_scraper.py
(+13917 files in other folders)
