[project]
authors = [{name = "Cordero Core", email = "127983572+uwcdc@users.noreply.github.com"}]
dependencies = []
name = "hazmap-scraper"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
hazmap_scraper = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
requests = ">=2.32.4,<3"
pydantic = ">=2.11.7,<3"
pyyaml = ">=6.0.2,<7"
beautifulsoup4 = ">=4.12.2,<5"
